--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "login.html";
+        window.location.href = "login/login.html";
     </script
 
     <div class="container">
