--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <script>
         window.location.href = "login/login.html";
-    </script
+    </script>
 
     <div class="container">
      
